<resources>

    <string name="app_name">Simple Note</string>
    <string name="app_version">_v1.0</string>
    <string name="title_activity_note">Simply NoteIt!</string>
    <string name="title_settings_activity">Settings</string>
    <string name="default_folder_name">My Notes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>

    <string name="action_delete_folder">Delete Folder</string>
    <string name="action_rename_folder">Rename Folder</string>
    <string name="action_note_not_save">Close without saving</string>
    <string name="action_note_delete">Delete Note</string>
    <string name="action_context_open">Open</string>
    <string name="action_context_delete">Delete</string>
    <string name="action_context_move">Move to</string>
    <string name="action_clean_bin">Clean the Bin</string>

    <string name="nav_header_title">Simply NoteIt!</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_home_folder">My Notes</string>
    <string name="nav_bin">Bin</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="nav_add_new_folder">Add New Folder</string>

    <string name="d_create_folder_hint">Enter Name</string>
    <string name="d_delete_title">Deleting</string>
    <string name="d_delete_message">Delete Note?</string>
    <string name="d_empty_title">Empty Bin</string>
    <string name="d_empty_message">Delete all notes from Bin?</string>
    <string name="d_about_message">Simple Note v1.0</string>
    <string name="d_notes_imported_title">Import Finished!</string>
    <string name="d_import_failed_title">Import Failed! :(</string>
    <string name="d_import_failed_message_1">Backup file is empty!</string>
    <string name="d_import_failed_message_2">Backup file does not exist!</string>
    <string name="d_notes_folders_imported">%d notes imported\n%d folders imported</string>
    <string name="d_export_finished_title">Export Finished!</string>
    <string name="d_export_notes_as_text_path">Notes saved in:\n%s</string>
    <string name="d_export_backup_path">File saved in:\n%s</string>
    <string name="d_attention_title">Attention!</string>
    <string name="d_attention_message">Backup file already exists.\nDo you want to overwrite it?</string>
    <string name="d_fail_to_read_external_storage">External Storage is not available!</string>

    <string name="mes_folder_is_not_empty">Folder is not Empty</string>
    <string name="mes_note_moved_to_bin">Note moved to Bin!</string>
    <string name="mes_note_deleted">Note deleted!</string>
    <string name="mes_bin_is_empty">Bin is Empty!</string>
    <string name="mes_folder_exists">This folder already exists</string>
    <string name="mes_not_yet_implemented">Not yet implemented :(</string>
    <string name="mes_permission_denied">Permission denied!</string>

    <string name="hint_note_text">Enter your note here…</string>

    <string name="set_export_title">Export Notes</string>
    <string name="set_export_text">Export notes and folders to file</string>
    <string name="set_import_title">Import Notes</string>
    <string name="set_import_text">Import notes and folders from file</string>
    <string name="set_export_to_text_title">Export Notes to Text</string>
    <string name="set_export_to_text_text">Export notes to text files</string>
    <string name="set_animation">Animation</string>

    <string name="shared_transition">Common Shared Element</string> <!--Do not translate!-->

</resources>
