<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:id="@+id/settings_export_item"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/export_notes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_export_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/export_notes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_export_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/settings_import_item"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:attr/selectableItemBackground">

        <TextView
            android:id="@+id/import_notes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_import_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

        <TextView
            android:id="@+id/import_notes_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_import_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"/>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:visibility="visible" />

</LinearLayout>